# attack-flow

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  migrate.afb  migrate.py  pyproject.toml  setup.cfg
corpus/: AF2_Target_breach_v.3.afb  Alternative VMWare Workspace ONE Access exploitation.afb  Alternative VMWare Workspace ONE Access exploitation.json  Attack Tree Example.afb  AttackIQ AA23-074A Attack Graph.afb  AttackIQ AA23-074A Attack Graph.json  Black Basta Ransomware.afb  CISA AA22-138B VMWare Workspace (Alt).afb  CISA AA22-138B VMWare Workspace (Alt).json  CISA AA22-138B VMWare Workspace (TA1).afb  CISA AA22-138B VMWare Workspace (TA1).json  CISA AA22-138B VMWare Workspace (TA2).afb  CISA AA22-138B VMWare Workspace (TA2).json  CISA AA23-074A Progress Telerik Vulnerability.afb  CISA AA23-074A Progress Telerik Vulnerability.json  CISA Iranian APT.afb  CISA Iranian APT.json  Cobalt Kitty Campaign.afb  Cobalt Kitty Campaign.json  CobaltKitty_v.1.afb  Conti CISA Alert.afb  Conti CISA Alert.json  Conti PWC.afb  Conti PWC.json  Conti Ransomware.afb  Conti Ransomware.json  Conti_v.2.afb  DFIR - BumbleBee Round 2.afb  DFIR - BumbleBee Round 2.json  Equifax Breach.afb  Equifax Breach.json  Equifax_breach_v.2.afb  Example Attack Tree.afb  FIN13 Case 1.afb  FIN13 Case 1.json  FIN13 Case 2.afb  FIN13 Case 2.json  FIN13_Case1_v.4.afb  FIN13_Case2_v.3.afb  Fin13_Case1_v.1.afb  (+113 more)
corpus.af1/: Gootloader.json  READMD.me  Ragnar Locker.afd  Ragnar Locker.json  conti-alert-workshop-AA21-265A.afd  conti_2021.afd  conti_2021.json  jpmorgan.json  mac_malware_steals_cryptocurrency.afd  notpetya.json  right-to-left-override.afd  tesla.afd
data/: action-object-tesla.drawio  cobalt-kitty-attack-flow.json
docs/: CEO_Scenario.pptx  Makefile  action-object-schema.md  actions-objects-schema.md  actions-only-schema.md  attack-flow-schema.md  attack_flow_specification.md  attack_tree.rst  best_practices.rst  builder.rst  ceo_scenario.md  (+17 more)
(+1477 files in other folders)
