[tool.poetry]
name = "attack-flow"
version = "2.1.0"
description = "Attack Flow helps executives, SOC managers, and defenders easily understand how attackers compose ATT&CK techniques into attacks by developing a representation of attack flows, modeling attack flows for a small corpus of incidents, and creating visualization tools to display attack flows."
authors = [
    "Desiree Beck <dbeck@mitre.org>",
    "Jackie Lasky <jlasky@mitre.org>",
    "Lauren Parker <lparker@mitre.org>",
    "Mark Haase <mhaase@mitre.org>",
    "Mia Sanchez <msanchez@mitre.org>",
    "Michael Carenzo <mcarenzo@mitre.org>",
    "Ron Alford <ralford@mitre.org>",
]
packages = [{ include = "attack_flow", from = "src" }]
license = "Apache"

[tool.poetry.scripts]
af = "attack_flow.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "4.17.3"
Sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
stix2 = "^3.0.1"
sphinx_design = "^0.2.0"
networkx = "^2.8.6"
graphviz = "^0.20.1"
defusedxml = "^0.7.1"
bumpver = "^2022.1119"

[tool.poetry.dev-dependencies]
bandit = "1.7.0"
pytest = "^7.1.2"
pytest-cov = "2.11.1"
pytest-flake8 = "1.0.7"
pytest-mock = "3.5.1"
safety = "^2.3.5"
sphinx-rtd-theme = "^1.0.0"
black = "^22.3.0"
bumpver = "^2022.1119"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "v2.0.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
# pep440_version does not have the "v" prefix
"pyproject.toml" = ['version = "{pep440_version}"']
"docs/conf.py" = ['version = "{version}"']
"docs/developers.rst" = [
    "    Installing the current project: attack-flow ({pep440_version})",
    "    Attack Flow version {pep440_version}",
]
"src/attack_flow_builder/package.json" = ['"version": "{pep440_version}",']
